2013-05-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* .classpath, .settings, .settings/org.eclipse.jdt.core.prefs:
	added garbage files necesaries for eclipse.
	
	* AndroidManifest.xml: update the version.
	
	* bin/AndroidManifest.xml: erased temp file from project compilation
	in eclipse.
	
	* proguard.cfg: fixed the file and change the deprecated
	instructions.
	
	* src/pandroid/agent/PandroidAgentListener.java: added the code for
	to magical change to open source version.
	
	* src/pandroid/agent/PandroidAgentTentacle.java,
	src/pandroid/agent/PandroidAgent.java: improved the source code
	style.
	
	* res/values/strings.xml, res/values-en/strings.xml,
	res/values-es/strings.xml: updated the texts.

2013-05-28  Junichi Satoh  <junichi@rworks.jp>

	* res/values-ja/strings.xml: Fixed a translation.

2013-05-18 Mark Holland <mark@mark-holland.me.uk>

    * Pandroid Agent v3.0_UTF8.apk: Added apk that sends xml in
    utf-8 encoding.

2013-05-18 Mark Holland <mark@mark-holland.me.uk>

    * src/pandroid/agent/PandroidAgentListener.java: Changed xml
    header to UTF-8 encoding.

    * src/pandroid/agent/PandroidAgentTentacle.java: Changed data
    String to byte array.

2013-05-16 Mark Holland <mark@mark-holland.me.uk>

	* src/pandroid/agent/PandroidAgentListener.java: Fixed
	values not showing up on status view when pandroid activity
	killed. Corrected spelling mistake of receiveBytes. Removed
	last_gps_contact module, wasn't implemented.

    * Pandroid Agent v3.0_iso-8859-1.apk: Updated to latest version.

2013-05-16 Mark Holland <mark@mark-holland.me.uk>

	* res/values: Added report inventory string to all languages.
	fixed some wrongly spelled strings.

2013-05-15 Mark Holland <mark@mark-holland.me.uk>

	* Pandroid Agent v3.0_iso-8859-1.apk: Updated to latest version.

2013-05-15 Mark Holland <mark@mark-holland.me.uk>

    * src/pandroid/agent/PandroidAgentListener.java: Possibly fixed
    notification disappearing, agent running > 24 hours and notification