@@ -16,8 +16,8 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pandroid.agent"
-    android:versionCode="3"
-    android:versionName="1.6" >
+    android:versionCode="103"
+    android:versionName="3.0" >
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -34,8 +34,11 @@
 
     <uses-feature android:name="android.hardware.sensor.light" />
     <uses-feature android:name="android.hardware.location" />
+	
+	<uses-sdk android:minSdkVersion="8" />
 
     <application
+		android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
@@ -87,7 +90,4 @@
             </intent-filter>
         </receiver>
     </application>
-
-    <uses-sdk android:minSdkVersion="8" />
-
 </manifest>
